--- a/Basics_DL_material.ipynb
+++ b/Basics_DL_material.ipynb
@@ -1291,7 +1291,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "About this material: copyright Baptiste Caramiaux (write me for any questions or use of this material [email](mailto:baptiste.caramiaux@lri.fr))\n",
+    "About this exercise material: copyright Baptiste Caramiaux (write me for any questions or use of this material [email](mailto:baptiste.caramiaux@lri.fr))\n",
     "___"
    ]
   }
